--- a/public/_doc/index.html
+++ b/public/_doc/index.html
@@ -6,7 +6,7 @@
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"https://abv.libis.be/","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://abv.libis.be/","name":"Archiefpunt Ontologie", "headline":"Archiefpunt ontologie beschrijving", "datePublished":"2022-02-11", "version":"v1.0.0", "license":"http://creativecommons.org/licenses/by/2.0/", "author":[{"@type":"Person","name":"Bert Lemmens"},{"@type":"Person","name":"Bert Aernouts"}], "contributor":[{"@type":"Person","name":"Ganesh Venkatasubban"},{"@type":"Person","name":"Mehmet Celik"}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"https://data.archiefpunt.be/","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://data.archiefpunt.be/","name":"Archiefpunt Ontologie", "headline":"Archiefpunt ontologie beschrijving", "datePublished":"2022-02-11", "version":"v1.0.0", "license":"http://creativecommons.org/licenses/by/2.0/", "author":[{"@type":"Person","name":"Bert Lemmens"},{"@type":"Person","name":"Bert Aernouts"}], "contributor":[{"@type":"Person","name":"Ganesh Venkatasubban"},{"@type":"Person","name":"Mehmet Celik"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
