--- a/public/_doc/sections/description-nl.html
+++ b/public/_doc/sections/description-nl.html
@@ -1,4 +1,5 @@
 <h2 id="desc" class="list">Archiefpunt Ontologie: Beschrijving <span class="backlink"> terug naar <a href="#toc">Index</a></span></h2>
-<span class="markdown">
-Dit is een tijdelijke tekst voor de beschrijving van de ontologie. De beschrijving moet een uitleg en een diagram bevatten waarin wordt uitgelegd hoe de klassen met elkaar in verband staan, gebruiksvoorbeelden, enz.</span>
+<span>
+    Voor een uitgebreide beschrijving van het <a href="https://docs.google.com/document/d/1X2c-h9fPPL1sIoFchaWttPFKLzKsaWpFr1HwV8V2Nas/edit#heading=h.mpawypy9hfqa">datamodel</a>
+</span>
 
