--- a/public/_doc/sections/overview-nl.html
+++ b/public/_doc/sections/overview-nl.html
@@ -1,6 +1,6 @@
 <h2 id="overv" class="list">Archiefpunt Ontologie: Overzicht <span class="backlink"> terug naar <a href="#toc">Index</a></span></h2>
-<span class="markdown">
-Deze ontologie heeft de volgende klassen en eigenschappen.</span>
+<span class="markdown">Deze ontologie heeft de volgende klassen en eigenschappen.</span>
+
 <h4>Klassen</h4>
 <ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
