--- a/public/_doc/sections/references-nl.html
+++ b/public/_doc/sections/references-nl.html
@@ -1,5 +1,9 @@
-
 <h2 id="ref" class="list">Referenties <span class="backlink"> terug naar <a href="#toc">Index</a></span></h2>
 <span class="markdown">
-Voeg hier uw referenties toe. Het wordt aanbevolen om ze in lijstvorm op te voeren.</span>
+    <ol>
+        <li><a href="https://docs.google.com/document/d/1X2c-h9fPPL1sIoFchaWttPFKLzKsaWpFr1HwV8V2Nas/edit#heading=h.mpawypy9hfqa">Datamodel werkdocument</a></li>
+        <li><a href="https://docs.google.com/spreadsheets/d/1xhvOCfiSIOtHjIJUtRrxvJ54OoDosNJ_JsA1B7FfpsI/edit#gid=226213897">Datamodel Google sheet</a></li>
+        <li><a href="https://raw.githubusercontent.com/libis/Archiefpunt/main/config/solis/abv_shacl.ttl">Datamodel SHACL</a></li>
+    </ol>
+</span>
 
