--- a/public/_doc/index.html
+++ b/public/_doc/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
- <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Archiefpunt Ontologie</title>
+ <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Luisterpunt Ontologie</title>
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"https://data.archiefpunt.be/","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://data.archiefpunt.be/","name":"Archiefpunt Ontologie", "headline":"Archiefpunt ontologie beschrijving", "datePublished":"2022-09-20", "version":"v1.0.2", "license":"http://creativecommons.org/licenses/by/2.0/", "author":[{"@type":"Person","name":"Bert Lemmens"},{"@type":"Person","name":"Bert Aernouts"}], "contributor":[{"@type":"Person","name":"Ganesh Venkatasubban"},{"@type":"Person","name":"Mehmet Celik"}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"https://data.luisterpunt.vlaanderen/","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://data.luisterpunt.vlaanderen/","name":"Luisterpunt Ontologie", "headline":"Luisterpunt ontologie beschrijving", "datePublished":"2022-02-11", "version":"v0.4", "license":"http://creativecommons.org/licenses/by/2.0/"}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -59,21 +59,15 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-nl.html"><b>nl</b></a> </div>
-<h1>Archiefpunt Ontologie</h1>
-<h2>Release  2022-09-20</h2>
+<h1>Luisterpunt Ontologie</h1>
+<h2>Release  2022-02-11</h2>
 
 
 <dl>
 <dt>Revisie:</dt>
-<dd>v1.0.2</dd>
-<dt>Auteurs:</dt>
-<dd>Bert Lemmens, (<a href="https://meemo.be/en">meemo</a>)</dd><dd>Bert Aernouts, (<a href="https://kadoc.kuleuven.be/english">KADOC KULeuven</a>)</dd>
-
-<dt>Bijdragers:</dt>
-<dd>Ganesh Venkatasubban, (<a href="https://kadoc.kuleuven.be/english">KADOC KULeuven</a>)</dd><dd>Mehmet Celik, (<a href="https://www.libis.be">LIBIS</a>)</dd>
-
+<dd>v0.4</dd>
 <dt>Uitgever:</dt>
-<dd><a href="https://archiefpunt.be/">Archiefpunt</a>, (<a href="Archiefpunt">Archiefpunt</a>)</dd>
+<dd><a href="https://Luisterpunt.be/">Luisterpunt</a>, (<a href="Luisterpunt">Luisterpunt</a>)</dd>
 <dt>Download serialisatie:</dt><dd><span><a href="ontology.jsonld" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>Licentie: </dt><dd><a href="http://creativecommons.org/licenses/by/2.0/" target="_blank"><img src="https://img.shields.io/badge/License-CC_BY-blue.svg" alt="http://creativecommons.org/licenses/by/2.0/" /></a>
 <a href="http://creativecommons.org/licenses/by/2.0/" rel="license" target="_blank">
 <img src="https://i.creativecommons.org/l/by/2.0/88x31.png" style="border-width:0" alt="License" />
@@ -85,7 +79,7 @@ function loadTOC(){
 </div>
 <div class="status">
 <div>
-<span>Archiefpunt Specificatie Ontwerp</span>
+<span>Luisterpunt Specificatie Ontwerp</span>
 </div>
 </div>     <div id="abstract"></div>
 <div id="toc"></div>     <div id="introduction"></div>
